# kyc-portal

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package.json  tailwind.config.js
docs/: kyc-portal-architecture.md
src/: app.rs  lib.rs  main.rs
src/api/: bff.rs  mod.rs  models.rs
src/auth/: client.rs  jwt.rs  mod.rs
src/components/: flow.rs  layout.rs  mod.rs  ui.rs
src/state/: flow.rs  mod.rs  store.rs
src/styles/: main.css
src/utils/: storage.rs
tests/: wasm_tests.rs
