[workspace]
members = ["."]
resolver = "2"

[package]
name = "veriffyi"
version = "0.1.0"
edition = "2024"
description = "KYC Hosted Page Portal - Yew WASM Frontend"

[[bin]]
name = "veriffyi"
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Storage",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "UrlSearchParams",
    "console",
] }
gloo = "0.11"
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "2.0"
log = "0.4"
wasm-logger = "0.2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
